# rust-axum-minijinja-htmx-examples

./: Cargo.toml  README.md  justfile  package.json  tailwind.config.cjs  test.http
data/: car_brands.json  placeholders.json  routes.json  toc.json  users_1.json  users_2.json
public/css/: _delete_me.css  inter_font.css  main.css  style.css
public/js/: confirm2.js  sortable.js
src/: main.rs
src/app/: config.rs  errors.rs  functions.rs  init.rs  mod.rs  routes.rs  state.rs  templates.rs
src/app/application/: mod.rs
src/app/domain/: mod.rs
src/app/domain/entities/: mod.rs  (+7 more)
src/app/infrastructure/: mod.rs
src/app/presentation/: helpers.rs  mod.rs
templates/layouts/: layout.html
templates/macros/: inputs.html
templates/pages/: default.html  home.html
templates/pages/active_search/: index.html
templates/pages/animations/: fadein.html  fadeout.html  index.html  requestin.html  throb.html  usingclass.html  usingview.html
templates/pages/async_auth/: index.html
templates/pages/bulk_update/: index.html
templates/pages/click_2_edit/: index.html
templates/pages/click_2_load/: index.html
templates/pages/confirm/: example1.html  example2.html  index.html
templates/pages/delete_row/: index.html
templates/pages/dialogs/: index.html
templates/pages/dialogs_uikit/: index.html
templates/pages/edit_row/: index.html
templates/pages/file_upload/: hsversion.html  index.html  jsversion.html
templates/pages/file_upload_input/: index copy.html  index.html
templates/pages/infinite_scroll/: index.html
templates/pages/inline_validation/: index.html
(+122 files in other folders)
