[package]
name = "axum_minijinja_htmx_examples"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8.1", features = ["multipart"] }
chrono = "0.4.39"
dotenvy = "0.15.7"
eyre = "0.6.12"
jsonwebtoken = "9.3.0"
minijinja = { version = "2.6.0", features = ["loader"] }
once_cell = "1.20.2"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
urlencoding = "2.1.3"
validator = { version = "0.20.0", features = ["derive"] }
waxum_logger = { version = "0.1.0", path = "../../../[libs]/waxum_logger" }
wshared = { version = "0.1.0", path = "../../../[libs]/wshared" }
